--- a/css/estilo.css
+++ b/css/estilo.css
@@ -44,3 +44,19 @@ footer{
     background-color: #eb9722;
     border-color: #eb9722;
 }
+
+p {
+    font-size: 25px;
+}
+
+@media only screen and (max-width: 1000px) {       
+    body {
+        font-size: 30px;
+    }
+    p {
+        font-size: 30px;
+    }
+    h3 {
+        font-size: 35px;
+    }
+}
