--- a/css/estilo.css
+++ b/css/estilo.css
@@ -49,7 +49,13 @@ p {
     font-size: 25px;
 }
 
-@media only screen and (max-width: 1000px) {       
+.navbar-icon{
+    max-width: 80%;
+    height: auto;
+    min-width: 600px;
+}
+
+@media only screen and (max-width: 991px) {       
     body {
         font-size: 30px;
     }
@@ -58,5 +64,19 @@ p {
     }
     h3 {
         font-size: 35px;
+    }
+
+    .nav-link {
+        font-size: 45px;
+    }
+
+    .navbar-toggler-icon {
+        font-size: 40px;
+    }
+
+    .navbar-icon img{
+        max-width: 100%;
+        height: auto;
+        width: 100%;
     }
 }
