Mudança de font em telas menores

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -66,6 +66,9 @@ p {
     p {
         font-size: 30px;
     }
+    .p2{
+        font-size: 25px;
+    }
     h3 {
         font-size: 35px;
     }
